--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cool-panda",
+  "publisher": "MatthewJustice",
   "displayName": "Cool Panda",
   "description": "A theme inspired by Panda Syntax but favoring cooler tones",
   "version": "0.0.1",
