--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
       "url": "https://github.com/JusticeMatthew/cool-panda/issues"
   },
   "galleryBanner": {
-      "color": "#1FE0CA",
+      "color": "#232323",
       "theme": "dark"
   },
   "icon": "images/cool-panda.png",
