--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "cool-panda",
   "publisher": "MatthewJustice",
   "displayName": "Cool Panda",
-  "description": "A theme inspired by Panda Syntax but favoring cooler tones",
-  "version": "1.0.0",
+  "description": "A theme inspired by Panda Syntax but favoring cooler tones (TS Supported)",
+  "version": "1.0.1",
   "engines": {
       "vscode": "^1.64.0"
   },
