added new website

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "author": {
       "name": "Matthew Justice"
   },
+  "website" : {
+    "url": "https://cool-panda.vercel.app/"
+  },
   "repository": {
       "type": "git",
       "url": "https://github.com/JusticeMatthew/cool-panda"
